my-apachephp8/ingress-myapachephp8.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myapachephp8
  namespace: firstapp-argo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: web1.qofs.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-apachephp8
                port:
                  number: 80
